@@ -1,5 +1,6 @@
 User johns
 
+    Find AC3 (Dolby Digital) inside PES packet.
     Fix bug: audio increments invalid audio PTS.
     Fix bug: dvd plugin not working.
     Fix bug: used frame-> instead of video_ctx-> for old libav/ffmpeg.
